# encryption-sandbox

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
theencryptor/: commands.cpp  commands.h  main.cpp
